[package]
name = "capturescreen"
version = "0.1.0"
authors = ["wingdust <995315823@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hotkey = "0.3.1"
# libloading = "0.7"
[target.'cfg(windows)'.dependencies]
# winapi =  "0.3.9" 
# winapi-util = "0.1"

